[gd_scene load_steps=12 format=3 uid="uid://d4h61wnda4pdm"]

[ext_resource type="PackedScene" uid="uid://cu2vt4dd76umh" path="res://player.tscn" id="1_f3sb7"]
[ext_resource type="Script" uid="uid://ky125qays7vt" path="res://Game.gd" id="1_fj7yv"]
[ext_resource type="Script" uid="uid://bj1vjhv0fxjbv" path="res://crosshair.gd" id="3_aqk2v"]
[ext_resource type="PackedScene" uid="uid://6lc1flonccyr" path="res://Target_level1.tscn" id="4_aqk2v"]
[ext_resource type="Shader" uid="uid://bcfs12m7g8xck" path="res://retro_postprocess_screen.gdshader" id="5_036b0"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_f3sb7"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_fj7yv"]
sky_material = SubResource("ProceduralSkyMaterial_f3sb7")

[sub_resource type="Environment" id="Environment_tlwt5"]
background_mode = 2
sky = SubResource("Sky_fj7yv")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="BoxShape3D" id="BoxShape3D_f3sb7"]

[sub_resource type="BoxMesh" id="BoxMesh_fj7yv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dwbse"]
shader = ExtResource("5_036b0")
shader_parameter/scale_resolution = true
shader_parameter/target_resolution_scale = 7
shader_parameter/change_color_depth = false
shader_parameter/target_color_depth = 5
shader_parameter/dithering = false
shader_parameter/brightness = 0.0
shader_parameter/contrast = 1.35
shader_parameter/saturation = 0.9
shader_parameter/noise_enabled = true
shader_parameter/noise_strength = 0.035
shader_parameter/chromab_enabled = true
shader_parameter/chromab_pixels = 1.5
shader_parameter/enable_recolor = false
shader_parameter/palette_enabled = false
shader_parameter/pal0 = Vector3(0.05, 0.1, 0.05)
shader_parameter/pal1 = Vector3(0.2, 0.45, 0.2)
shader_parameter/pal2 = Vector3(0.6, 0.8, 0.35)
shader_parameter/pal3 = Vector3(0.9, 0.95, 0.7)

[node name="World" type="Node3D"]
script = ExtResource("1_fj7yv")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_tlwt5")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_f3sb7")]

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5, 0)
use_collision = true
collision_layer = 2
size = Vector3(20, 0.5, 20)

[node name="Wall" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.29, -10)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Wall"]
transform = Transform3D(10, 0, 0, 0, 5, 0, 0, 0, 0.2, 0, 0, 0)
shape = SubResource("BoxShape3D_f3sb7")
debug_color = Color(0.478431, 0.537255, 1, 1)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Wall"]
transform = Transform3D(10, 0, 0, 0, 5, 0, 0, 0, 0.2, 0, 0, 0)
mesh = SubResource("BoxMesh_fj7yv")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="ScoreLabel" type="Label" parent="CanvasLayer"]
offset_right = 143.0
offset_bottom = 70.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 38
text = "score: 0"

[node name="Crosshair" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3_aqk2v")

[node name="TimerLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -38.0
offset_right = 38.0
offset_bottom = 53.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 54
text = "00.0"

[node name="LevelLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -104.0
offset_bottom = 44.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 38
text = "Level 1"

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true

[node name="Target" parent="." node_paths=PackedStringArray("wall") instance=ExtResource("4_aqk2v")]
wall = NodePath("../Wall")

[node name="Target2" parent="." node_paths=PackedStringArray("wall") instance=ExtResource("4_aqk2v")]
wall = NodePath("../Wall")

[node name="Target3" parent="." node_paths=PackedStringArray("wall") instance=ExtResource("4_aqk2v")]
wall = NodePath("../Wall")

[node name="PostFX" type="CanvasLayer" parent="."]

[node name="RetroOverlay" type="ColorRect" parent="PostFX"]
material = SubResource("ShaderMaterial_dwbse")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
